--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,121 @@
+:root {
+  background: lightgray;
+}
+
 main {
+  width: 100%;
   text-align: center;
   vertical-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+header {
+  width: 100%;
+  background: #3BB273;
+  display: flex;
+  text-align: left;
+  padding-left: 15px;
+  padding-right: 10px;
+
+}
+
+h1 {
+  color: white;
+  flex-grow: 5;
+  padding-left: 10px;
+}
+
+nav {
+  padding-top: 10px;
+  padding-right: 20px;
+}
+
+nav button {
+  font-size: 1em;
+}
+
+.PostList {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.filtering {
+  background: white;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
 }
 
 .Post {
-  background: lightgray;
-  height: 200px;
-  width: 40%;
+  background: white;
+  height: auto;
+  width: 50%;
+}
+
+.likesComments {
+  font-size: 0.9em;
+  display: flex;
+  justify-content: flex-end;
+  align-content: flex-end;
+  gap: 10px;
+  padding-right: 10px;
+}
+
+.postCreatedTime {
+  text-align: left;
+  flex-grow: 1;
+  padding-left: 10px;
+}
+
+.postDetail {
+  background: white;
+  height: auto;
+  width: 50%;
+  text-align: left;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.comments {
+  background: white;
+  border: 1px solid darkgray;
+  margin: 4px;
+  padding: 5px 0 5px 5px;
+}
+
+.newComment {
+  margin-top: 10px;
+}
+
+h4 {
+  margin: 0 5px 0 0;
+}
+
+.comment {
+  padding: 10px;
+  border-bottom: 1px solid darkgray;
+}
+
+.commentTime {
+  color: gray;
+  font-size: 0.8em;
 }
