--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 :root {
   background: lightgray;
+  font-family: "Dosis";
 }
 
 main {
-  width: 100%;
   text-align: center;
   vertical-align: center;
   display: flex;
@@ -13,30 +13,36 @@ main {
 }
 
 .nav {
-  position: fixed;
-  top: 0;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 header {
+  position: fixed;
+  left: 0;
+  top: 0;
   width: 100%;
   background: #3BB273;
   display: flex;
   text-align: left;
   padding-left: 15px;
   padding-right: 10px;
-
 }
 
 h1 {
+  font-family: "Agbalumo";
   color: white;
   flex-grow: 5;
   padding-left: 10px;
+}
+
+h3 {
+  font-size: 1.3em;
+  font-weight: 700px;
 }
 
 nav {
@@ -55,6 +61,9 @@ nav button {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin-top: 80px;
 }
 
 .filtering {
@@ -81,18 +90,26 @@ nav button {
 }
 
 .postCreatedTime {
+  color: gray;
   text-align: left;
   flex-grow: 1;
   padding-left: 10px;
 }
 
 .postDetail {
+  margin-top: 100px;
   background: white;
   height: auto;
   width: 50%;
   text-align: left;
   padding-left: 10px;
   padding-right: 10px;
+  align-self: center;
+}
+
+.detailFoot {
+  display: flex;
+  justify-content: space-between;
 }
 
 .comments {
@@ -115,7 +132,31 @@ h4 {
   border-bottom: 1px solid darkgray;
 }
 
-.commentTime {
+.time {
   color: gray;
   font-size: 0.8em;
+}
+
+.CreatePost, .EditPost {
+  align-self: center;
+  margin-top: 100px;
+  background: white;
+  width: 50%;
+  padding: 10px
+}
+
+form input {
+  width: 370px;
+}
+
+a {
+  color: #3BB273;
+}
+
+a:visited {
+  color: #3BB273;
+}
+
+a:hover {
+  color: #27794E;
 }
